Fix related shouts layout on Safari

--- a/app/pages/shout/ShoutPage.scss
+++ b/app/pages/shout/ShoutPage.scss
@@ -96,7 +96,7 @@
     scroll-snap-type: mandatory;
     flex-wrap: nowrap;
   }
-  .ShoutList-item {
+  .ShoutsList-item {
     scroll-snap-coordinate: 50% 50%;
     flex: 1 0 auto;
   }
